# clickhouse-perf-profiler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  config.json  first_steps.cpp  vcpkg.json
cmake/dependencies/: common.cmake  populate.cmake  setup.cmake  vcpkg.cmake  vcpkg_features.cmake
contrib/: CMakeLists.txt
contrib/BigRedEye/poorprof/cmake/: common.cmake  variables.cmake
contrib/BigRedEye/poorprof/cmake/dependencies/: populate.cmake  setup.cmake
contrib/BigRedEye/poorprof/src/: CMakeLists.txt
contrib/BigRedEye/poorprof/src/dw/: gdb_index.h
contrib/BigRedEye/poorprof/src/unwinder/: CMakeLists.txt  unwinder.h
contrib/BigRedEye/poorprof/src/util/: processes.h
contrib/clickhouse/: CMakeLists.txt
contrib/clickhouse/base/: compressed.cpp
contrib/clickhouse/columns/: lowcardinality.cpp
contrib/clickhouse/types/: types.cpp
contrib/json/: CMakeLists.txt
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/dbmanager/: CMakeLists.txt  dbmanager.h
src/dw/: CMakeLists.txt
src/hwstats/: CMakeLists.txt  hwstats.cpp  hwstats.h  hwstats.hpp
src/main/: main.cpp
src/unwinder/: unwinder.h
src/util/: CMakeLists.txt  processes.cpp
